--- a/.github/workflows/Syft.yml
+++ b/.github/workflows/Syft.yml
@@ -18,7 +18,7 @@ jobs:
   sbom-scan:
     permissions:
       contents: write
-    runs-on: self-hosted, Windows
+    runs-on: self-hosted
     steps:
       - name: Checkout the code
         uses: actions/checkout@v3
