--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -17,23 +17,15 @@ jobs:
       - name: Build project
         run: |
           # Add commands to build the project here
-
-  analyze:
-    name: Syft SBOM Scan
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      contents: write
-    steps:
-      - name: Checkout the code
-        uses: actions/checkout@v3
       - name: SPDX Scan
+        id: spdx_scan
         uses: anchore/sbom-action@v0
         with:
           format: spdx-json
           artifact-name: spdx.json
           # Add any additional SPDX scan options if available
       - name: CycloneDX Scan
+        id: cyclonedx_scan
         uses: anchore/sbom-action@v0
         with:
           format: cyclonedx-json
@@ -43,12 +35,15 @@ jobs:
   results:
     name: Results
     runs-on: ubuntu-latest
-    needs: analyze
+    needs: build
     steps:
-      - name: Upload Syft SBOM Results
+      - name: Upload SPDX JSON
         uses: actions/upload-artifact@v2
         with:
-          name: sbom-results
-          path: |
-            spdx.json
-            cdx.json
+          name: spdx-results
+          path: spdx.json
+      - name: Upload CycloneDX JSON
+        uses: actions/upload-artifact@v2
+        with:
+          name: cyclonedx-results
+          path: cdx.json
